2007-06-24  Aaron Stone  <aaron@serendipity.cx>

	* sort.c:
	Resolved a trivial compiler warning.
	* dbmail-user.c:
	List forwards as part of 'dbmail-user -l' output (closes bug #605)
	* auth.h, authmodule.h, authmodule.c, modules/authsql.c,
	modules/authldap.c:
	New function auth_get_known_aliases.
	* list.h, list.c:
	New function g_list_dedup.
	* man/fixsp.pl, man/Makefile.am:
	Added a Perl script to fix the man page output.
	* server.c:
	Reopen log files after a HUP (closes bug #615)
	* modules/sortsieve.c:
	Now use the correct Sieve name for vacation :handle (closes bug #608).

2007-06-21  Paul J Stevens <paul@nfg.nl>

	* dbmail-imapsession.c:
	collapse BETWEEN clause if hi and low values are equal
	* dbmail.conf, imapcommands.c:
	allow override of CAPABILITY message so people can disable stuff like 
	IDLE

2007-06-20  Paul Stevens <paul@nfg.nl>

	* modules/authldap.c, serverchild.c:
	add sigpipe handling during ldap disconnect
	* dbmail-imapsession.c, dbmail.conf:
	add idle_timeout to dbmail.conf

2007-06-19  Paul J Stevens <paul@nfg.nl>

	* Makefile.am, check_dbmail.h, check_dbmail_mailbox.c, 
	check_dbmail_message.c, db.c, dbmail-mailbox.c, dbmail-message.c, 
	dbmail-message.h, dbmail.h.in, dm_sha1.c, dm_sha1.h, 
	sql/mysql/2_2_5-2_3_0.mysql, sql/mysql/create_tables.mysql, 
	sql/postgresql/2_2_5-2_3_0.pgsql, sql/postgresql/create_tables.pgsql, 
	sql/sqlite/2_2_5-2_3_0.sqlite, sql/sqlite/create_tables.sqlite, 
	sql/sqlite/trigger.tmpl.sql:
	merge mimechunk

2007-06-18  Paul Stevens <paul@nfg.nl>

	* ChangeLog, db.c, dbmailtypes.h, modules/dbmysql.c, 
	modules/dbpgsql.c, modules/dbsqlite.c:
	add timewindow to suppress_duplicate detection
	* ChangeLog, dbmail.conf, sort.c:
	add suppress_duplicate to dbmail.conf
	* ChangeLog, db.c:
	check for resent-message-id during duplicate check
	* ChangeLog, db.c, db.h, sort.c:
	avoid duplicate message-ids in a mailbox
	* dbmail-imapsession.h:
	add missing prototype declaration
	* ChangeLog, dbmail-imapsession.c, imap4.c: